--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script src="js/responsiveslides.min.js"></script>
 		  <script>
 		    // You can also use "$(window).load(function() {"
-			    $(function () {
+			    (function () {
 			
 			      // Slideshow 1
 			      $("#slider1").responsiveSlides({
