--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			    $(function () {
 			
 			      // Slideshow 1
-			      $("#slider1").responsiveSlides({
+			      ("#slider1").responsiveSlides({
 			        maxwidth: 1600,
 			        speed: 600
 			      });
